%% Purchase Quotation Subsystem (Comprehensive)
erDiagram
  SALES_QUOTATION {
    string id
    string supplierId
    string referenceNumber
    float quotedPrice
    date validityDate
    boolean isOrder
    datetime createdAt
  }
  SALES_QUOTATION_MATERIAL {
    string id
    string salesQuotationId
    string rawMaterialId
    int quantity
    float unitPrice
  }
  SUPPLIER {
    string id
    string name
    string contact
  }
  RAW_MATERIAL {
    string id
    string name
    string category
    int stock
  }

  SUPPLIER ||--o{ SALES_QUOTATION : "receives"
  SALES_QUOTATION ||--o{ SALES_QUOTATION_MATERIAL : "has"
  SALES_QUOTATION_MATERIAL }o--o{ RAW_MATERIAL : "references"
  %% SalesQuotation may convert to PurchaseOrder
  SALES_QUOTATION ||--o{ PURCHASE_ORDER : "can convert to"
